gitops/common/kyverno-policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-labels
  annotations:
    policies.kyverno.io/title: Require app.kubernetes.io/name Label
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
spec:
  admission: true
  background: true
  emitWarning: false
  validationFailureAction: Audit
  rules:
    - name: check-app-label
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: "The label 'app.kubernetes.io/name' is required."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
